[gd_scene load_steps=18 format=3 uid="uid://dxeg8j8rmil8t"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_5tlm3"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/health_tab.gd" id="2_f6u4r"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="3_if32i"]
[ext_resource type="Texture2D" uid="uid://co7w81osg53kf" path="res://Textures/UI/Information/valid.png" id="4_l5lyb"]
[ext_resource type="Texture2D" uid="uid://tql14gtq05lf" path="res://Textures/UI/Information/invalid.png" id="4_q7src"]
[ext_resource type="PackedScene" uid="uid://80bi27me1iqr" path="res://Scenes and Scripts/UI/Buttons/pull_out_tab_button_down.tscn" id="5_vueuw"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="6_uctth"]
[ext_resource type="Texture2D" uid="uid://djfkh4k2lcuyg" path="res://Textures/Buttons/Tabs/tab_down_highlight.png" id="7_hs0gf"]
[ext_resource type="Texture2D" uid="uid://bw8jm82sn5nmq" path="res://Textures/Buttons/Tabs/tab_down.png" id="8_wtk80"]
[ext_resource type="FontFile" uid="uid://dohkbu7ekkfx8" path="res://Textures/Fonts/pixeltype/Pixeltype.ttf" id="9_xnlj5"]
[ext_resource type="Texture2D" uid="uid://deaff1f7fx60m" path="res://Textures/Buttons/icons/tick_circle.png" id="10_ff7v6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rciwt"]
content_margin_top = 2.0
texture = ExtResource("3_if32i")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_top = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u72hv"]
resource_local_to_scene = true
shader = ExtResource("6_uctth")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_loeqa"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 6.0
texture = ExtResource("7_hs0gf")
texture_margin_left = 6.0
texture_margin_top = 3.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xwugc"]
content_margin_left = 4.0
content_margin_top = 1.0
content_margin_right = 4.0
content_margin_bottom = 6.0
texture = ExtResource("8_wtk80")
texture_margin_left = 6.0
texture_margin_top = 2.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="FontVariation" id="FontVariation_68meq"]
base_font = ExtResource("9_xnlj5")
spacing_top = -2
spacing_bottom = -4

[sub_resource type="Theme" id="Theme_6ia4b"]
Button/styles/hover = SubResource("StyleBoxTexture_loeqa")
Button/styles/normal = SubResource("StyleBoxTexture_xwugc")
Button/styles/pressed = SubResource("StyleBoxTexture_xwugc")
Label/font_sizes/font_size = 16
Label/fonts/font = SubResource("FontVariation_68meq")

[node name="HealthTab" type="Control" node_paths=PackedStringArray("ContentContainer", "TabButton", "MovingContainer")]
material = ExtResource("1_5tlm3")
use_parent_material = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_f6u4r")
ContentContainer = NodePath("VBoxContainer/Tab/VBoxContainer")
TabButton = NodePath("VBoxContainer/TabButton")
MovingContainer = NodePath("VBoxContainer")
moving_container_margins = Vector2(2.08165e-12, 5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
custom_minimum_size = Vector2(123, 2.08165e-12)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 123.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="Tab" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_rciwt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tab"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 0
alignment = 2

[node name="DiagramValid" type="HBoxContainer" parent="VBoxContainer/Tab/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Tab/VBoxContainer/DiagramValid"]
layout_mode = 2
texture = ExtResource("4_l5lyb")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Tab/VBoxContainer/DiagramValid"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Diagram is not valid"
vertical_alignment = 2

[node name="DiagramConnected" type="HBoxContainer" parent="VBoxContainer/Tab/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Tab/VBoxContainer/DiagramConnected"]
layout_mode = 2
texture = ExtResource("4_q7src")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Tab/VBoxContainer/DiagramConnected"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Diagram is not connected"
vertical_alignment = 2

[node name="EnergyConservation" type="HBoxContainer" parent="VBoxContainer/Tab/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Tab/VBoxContainer/EnergyConservation"]
layout_mode = 2
texture = ExtResource("4_q7src")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Tab/VBoxContainer/EnergyConservation"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Energy is not conserved"
vertical_alignment = 2

[node name="TabButton" parent="VBoxContainer" instance=ExtResource("5_vueuw")]
z_index = 0
material = SubResource("ShaderMaterial_u72hv")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_6ia4b")
TabIcon = ExtResource("10_ff7v6")
TabMinimumSize = Vector2(23, 22)
expand_icon = true
icon_use_parent_material = true
